[package]
name = "zdds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.13"
rustc-hash = "1.1"
indexmap = "1.9.2"
petgraph = "0.6.3"
log = "0.4"
ordered-float = "3.7"
val-trie = { path = "../val-trie" }